log
Wed, Mar 19, 2025  8:33:22 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:40:14 AM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *(elemento);
               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
2d2c569
Thu, Mar 20, 2025  4:19:39 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b148e48
Thu, Mar 20, 2025  4:19:45 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
4de4e87
Thu, Mar 20, 2025  4:20:22 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
5061f2b
Thu, Mar 20, 2025  4:27:40 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
fce1fc8
Thu, Mar 20, 2025  4:41:40 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
0a58d2b
Thu, Mar 20, 2025  4:52:51 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b7965ea
Thu, Mar 20, 2025  5:02:18 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
   63 |       suma += *(elemento);
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
f507cdb
